# cpp20_rust_examples

./: .gitignore  LICENSE  cargo_wrapper.py  readme.md
.github/workflows/: build_workflows.yml  pr_checks.yml
conan_example/cpp_library-sys/: Cargo.toml  build.rs  conanfile.txt
conan_example/cpp_library-sys/cpp_library/: conanfile.py  meson.build
conan_example/cpp_library-sys/cpp_library/src/: cpp_library.cpp  cpp_library.h
conan_example/cpp_library-sys/cpp_library/test_package/: conanfile.py  meson.build
conan_example/cpp_library-sys/cpp_library/test_package/src/: example.cpp
conan_example/cpp_library-sys/src/: lib.rs
cpp_in_rust/: readme.md
cpp_in_rust/cargo_calls_conan/: readme.md
cpp_in_rust/cargo_calls_conan/cpp_library-sys/: Cargo.toml  build.rs  conanfile.txt
cpp_in_rust/cargo_calls_conan/cpp_library-sys/cpp_library/: meson.build
cpp_in_rust/cargo_calls_conan/cpp_library-sys/cpp_library/src/: cpp_library.cpp
cpp_in_rust/cargo_calls_conan/cpp_library-sys/cpp_library/test_package/src/: example.cpp
cpp_in_rust/cargo_calls_meson/: readme.md
cpp_in_rust/cargo_calls_meson/cpp_library_c_api-sys/: Cargo.toml  build.rs
cpp_in_rust/cargo_calls_meson/cpp_library_c_api-sys/cpp_library_c_api/: meson.build  readme.md
cpp_in_rust/cargo_calls_meson/cpp_library_c_api-sys/cpp_library_c_api/include/: lib_c.hpp
cpp_in_rust/cargo_calls_meson/cpp_library_c_api-sys/cpp_library_c_api/src/: lib.cpp
cpp_in_rust/cargo_calls_meson/cpp_library_c_api-sys/src/: lib.rs
cpp_in_rust/meson_builds_cpp_and_rust/: meson.build  readme.md
cpp_in_rust/meson_builds_cpp_and_rust/cpp_src/include/: lib_c.h
cpp_in_rust/meson_builds_cpp_and_rust/cpp_src/src/: lib.cpp
cpp_in_rust/meson_builds_cpp_and_rust/rust_src/: lib.rs  main.rs
cpp_library/: meson.build
cpp_library/include/: lib_c.hpp
example_without_conan/: cargo_wrapper.py
example_without_conan/cpp_library/src/: lib.cpp
example_without_conan/cpp_library_c_api-sys/: Cargo.toml  build.rs  readme.md
example_without_conan/cpp_library_c_api-sys/cpp_library_c_api/: meson.build  meson_options.txt
example_without_conan/rust_library/: build.rs  readme.md
local-env/: windows-sys  windows_native.ini
meson_cpp_rust/: readme.md
rust_conan/: Cargo.toml  build.rs  conanfile.txt
rust_conan/src/: main.rs
rust_in_cpp/: readme.md
rust_in_cpp/cpp_bindings_rust_lib/: cargo_build.py  meson.build  meson_options.txt
rust_in_cpp/meson_calls_cargo/: readme.md
rust_in_cpp/meson_calls_cargo/rust_lib_cpp_bindings/: cargo_build.py  meson.build
rust_in_cpp/meson_calls_cargo/rust_lib_cpp_bindings/include/: rust_lib_cpp_bindings.hpp
rust_in_cpp/meson_calls_cargo/rust_lib_cpp_bindings/rust_lib_c_abi/: Cargo.toml  build.rs
rust_in_cpp/meson_calls_cargo/rust_lib_cpp_bindings/rust_lib_c_abi/src/: lib.rs
rust_in_cpp/meson_calls_cargo/rust_lib_cpp_bindings/test/: meson.build  rust_lib_cpp_bindings_tests.cpp
rust_in_cpp/rust_lib/: Cargo.toml
rust_in_cpp/rust_lib_cpp_bindings/: cargo_build.py  meson.build
rust_in_cpp/rust_lib_cpp_bindings/rust_lib/: build.rs
rust_in_cpp/rust_lib_cpp_bindings/rust_lib_c_abi/: Cargo.toml  build.rs
rust_in_cpp/rust_lib_cpp_bindings/rust_lib_c_abi/src/: lib.rs
rust_in_cpp/rust_lib_cpp_bindings/test/: meson.build  rust_lib_cpp_bindings_tests.cpp
rust_library/: Cargo.toml  build.rs
rust_library/src/: lib.rs
system_stuff/: clang-sys  readme.md  rust-clang-native.ini  rust_buster.dockerfile
system_stuff/ci/linux/: ci-native.ini  conan-ci  requirements.txt
system_stuff/ci/macos/: ci-native.ini  conan-ci
system_stuff/ci/windows/: ci-native.ini  conan-ci
system_stuff/examples/: readme.md
system_stuff/examples/debian/: clang-sys  rust-clang-native.ini
system_stuff/examples/windows/: windows-native.ini
