[package]
name = "rust_lib_c_abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"

[build-dependencies]
cbindgen = { version = "0.21.0", optional = true }

[features]
binding-generation = ["cbindgen"]

[lib]
crate-type = ["cdylib"]